Update exception types