@@ -2,22 +2,18 @@ package pk.wc.pasir_wiktor_czerniak.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import pk.wc.pasir_wiktor_czerniak.dto.DebtDTO;
-import pk.wc.pasir_wiktor_czerniak.dto.GroupTransactionDTO;
-import pk.wc.pasir_wiktor_czerniak.model.Debt;
-import pk.wc.pasir_wiktor_czerniak.model.Group;
-import pk.wc.pasir_wiktor_czerniak.model.Membership;
-import pk.wc.pasir_wiktor_czerniak.model.User;
+import org.springframework.transaction.annotation.Transactional;
+import pk.wc.pasir_wiktor_czerniak.dto.*;
+import pk.wc.pasir_wiktor_czerniak.model.*;
 import pk.wc.pasir_wiktor_czerniak.repository.*;
-import pk.wc.pasir_wiktor_czerniak.dto.GroupNotificationDto;
-import pk.wc.pasir_wiktor_czerniak.model.Transaction;
 import pk.wc.pasir_wiktor_czerniak.model.TransactionType;
 
+import java.time.Clock;
 import java.time.LocalDateTime;
-
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,502 +27,211 @@ public class DebtService {
     private final GroupNotificationService groupNotificationService;
     private final TransactionRepository transactionRepository;
 
-    public List<Debt> getGroupDebts(
-            Long groupId
-    ) {
+    private static final Clock UTC_CLOCK = Clock.systemUTC();
 
-        User currentUser =
-                currentUserService.getCurrentUser();
+    @Transactional(readOnly = true)
+    public List<Debt> getGroupDebts(Long groupId) {
+        final User currentUser = currentUserService.getCurrentUser();
 
-        Membership membership =
-                membershipRepository
-                        .findByGroup_Id(groupId)
-                        .stream()
-                        .filter(m ->
-                                m.getUser()
-                                        .getId()
-                                        .equals(currentUser.getId())
-                        )
-                        .findFirst()
-                        .orElseThrow(() ->
-                                new RuntimeException(
-                                        "Brak dostępu do grupy"
-                                )
-                        );
+        final Membership membership = membershipRepository
+                .findByGroup_Id(groupId)
+                .stream()
+                .filter(m -> m.getUser().getId().equals(currentUser.getId()))
+                .findFirst()
+                .orElseThrow(() -> new SecurityException("Brak dostępu do grupy"));
 
         return debtRepository
                 .findByGroupId(groupId)
                 .stream()
-                .filter(debt ->
-                        !debt.getCreatedAt()
-                                .isBefore(
-                                        membership.getJoinedAt()
-                                )
-                )
-                .toList();
+                .filter(debt -> !debt.getCreatedAt().isBefore(membership.getJoinedAt()))
+                .collect(Collectors.toList());
     }
 
-    public Debt createDebt(
-            DebtDTO dto
-    ) {
+    @Transactional
+    public Debt createDebt(DebtDTO dto) {
+        final User debtor = userRepository.findById(dto.getDebtorId())
+                .orElseThrow(() -> new IllegalArgumentException("Nie znaleziono dłużnika"));
+        final User creditor = userRepository.findById(dto.getCreditorId())
+                .orElseThrow(() -> new IllegalArgumentException("Nie znaleziono wierzyciela"));
+        final Group group = groupRepository.findById(dto.getGroupId())
+                .orElseThrow(() -> new IllegalArgumentException("Nie znaleziono grupy"));
 
-        User debtor =
-                userRepository.findById(
-                        dto.getDebtorId()
-                ).orElseThrow();
+        validateGroupOwner(group);
 
-        User creditor =
-                userRepository.findById(
-                        dto.getCreditorId()
-                ).orElseThrow();
-
-        Group group =
-                groupRepository.findById(
-                        dto.getGroupId()
-                ).orElseThrow();
-
-        if (group.getOwner() == null) {
-            throw new RuntimeException(
-                    "Grupa nie ma właściciela"
-            );
-        }
-
-        User currentUser =
-                currentUserService.getCurrentUser();
-
-        boolean isOwner =
-                group.getOwner()
-                        .getId()
-                        .equals(
-                                currentUser.getId()
-                        );
-
-        boolean isParticipant =
-                debtor.getId().equals(
-                        currentUser.getId()
-                )
-                        ||
-                        creditor.getId().equals(
-                                currentUser.getId()
-                        );
-
-        if (
-                !isOwner
-                        &&
-                        !isParticipant
-        ) {
-            throw new RuntimeException(
-                    "Mozesz tworzyc tylko wlasne dlugi"
-            );
-        }
-
-        if (
-                debtor.getId().equals(
-                        creditor.getId()
-                )
-        ) {
-            throw new RuntimeException(
-                    "Nie mozna utworzyc dlugu do samego siebie"
-            );
-        }
-
-        if (
-                !membershipRepository
-                        .existsByGroup_IdAndUser_Id(
-                                group.getId(),
-                                debtor.getId()
-                        )
-        ) {
-            throw new RuntimeException(
-                    "Dluznik nie nalezy do grupy"
-            );
-        }
-
-        if (
-                !membershipRepository
-                        .existsByGroup_IdAndUser_Id(
-                                group.getId(),
-                                creditor.getId()
-                        )
-        ) {
-            throw new RuntimeException(
-                    "Wierzyciel nie nalezy do grupy"
-            );
-        }
+        final User currentUser = currentUserService.getCurrentUser();
+        checkAuthorization(group, debtor, creditor, currentUser);
+        validateSelfDebt(debtor, creditor);
+        validateMemberships(group, debtor, creditor);
 
         Debt debt = new Debt();
+        debt.setAmount(dto.getAmount());
+        debt.setTitle(dto.getTitle());
+        debt.setDebtor(debtor);
+        debt.setCreditor(creditor);
+        debt.setGroup(group);
 
-        debt.setAmount(
-                dto.getAmount()
-        );
-
-        debt.setTitle(
-                dto.getTitle()
-        );
-
-        debt.setDebtor(
-                debtor
-        );
-
-        debt.setCreditor(
-                creditor
-        );
-
-        debt.setGroup(
-                group
-        );
-
-        return debtRepository.save(
-                debt
-        );
+        return debtRepository.save(debt);
     }
 
-    public Debt addGroupTransaction(
-            GroupTransactionDTO dto
-    ) {
-
-        Group group =
-                groupRepository.findById(
-                        dto.getGroupId()
-                ).orElseThrow();
-
-        User currentUser =
-                currentUserService.getCurrentUser();
+    @Transactional
+    public Debt addGroupTransaction(GroupTransactionDTO dto) {
+        final Group group = groupRepository.findById(dto.getGroupId())
+                .orElseThrow(() -> new IllegalArgumentException("Nie znaleziono grupy"));
+        final User currentUser = currentUserService.getCurrentUser();
 
         Transaction transaction = new Transaction();
-
         transaction.setUser(currentUser);
         transaction.setAmount(dto.getAmount());
-
-        transaction.setType(
-                "EXPENSE".equals(dto.getType())
-                        ? TransactionType.EXPENSE
-                        : TransactionType.INCOME
-        );
-
-        transaction.setTimestamp(LocalDateTime.now());
+        transaction.setType("EXPENSE".equals(dto.getType()) ? TransactionType.EXPENSE : TransactionType.INCOME);
+        transaction.setTimestamp(LocalDateTime.now(UTC_CLOCK));
         transaction.setNotes("Transakcja grupowa: " + dto.getTitle());
 
         transactionRepository.save(transaction);
 
-        List<Membership> members =
-                membershipRepository.findByGroup_Id(
-                        group.getId()
-                );
-
-        List<Membership> selectedMembers =
-                selectParticipants(
-                        dto,
-                        members,
-                        currentUser
-                );
+        final List<Membership> members = membershipRepository.findByGroup_Id(group.getId());
+        final List<Membership> selectedMembers = selectParticipants(dto, members, currentUser);
 
         if (selectedMembers.isEmpty()) {
-            throw new RuntimeException(
-                    "Grupa nie ma czlonkow"
-            );
+            throw new IllegalStateException("Grupa nie ma członków");
         }
 
-        double amountPerUser =
-                dto.getAmount()
-                        / selectedMembers.size();
-
-        boolean expense =
-                "EXPENSE".equals(
-                        dto.getType()
-                );
+        final double amountPerUser = dto.getAmount() / selectedMembers.size();
+        final boolean expense = "EXPENSE".equals(dto.getType());
 
         Debt firstDebt = null;
 
         for (Membership membership : selectedMembers) {
-
-            User member =
-                    membership.getUser();
-
-            if (
-                    member.getId().equals(
-                            currentUser.getId()
-                    )
-            ) {
-                continue;
-            }
+            User member = membership.getUser();
+            if (member.getId().equals(currentUser.getId())) continue;
 
             Debt debt = new Debt();
+            debt.setTitle(dto.getTitle());
+            debt.setAmount(amountPerUser);
+            debt.setGroup(group);
+            debt.setDebtor(expense ? member : currentUser);
+            debt.setCreditor(expense ? currentUser : member);
 
-            debt.setTitle(
-                    dto.getTitle()
+            Debt savedDebt = debtRepository.save(debt);
+
+            GroupNotificationDto notification = new GroupNotificationDto(
+                    "GROUP_EXPENSE_ADDED", group.getId(), group.getName(), dto.getTitle(),
+                    dto.getAmount(), amountPerUser, currentUser.getEmail(),
+                    currentUser.getEmail() + " dodał wydatek " + dto.getTitle()
             );
 
-            debt.setAmount(
-                    amountPerUser
-            );
-
-            debt.setGroup(
-                    group
-            );
-
-            debt.setDebtor(
-                    expense
-                            ? member
-                            : currentUser
-            );
-
-            debt.setCreditor(
-                    expense
-                            ? currentUser
-                            : member
-            );
-
-            Debt savedDebt =
-                    debtRepository.save(
-                            debt
-                    );
-
-            GroupNotificationDto notification =
-                    new GroupNotificationDto(
-                            "GROUP_EXPENSE_ADDED",
-                            group.getId(),
-                            group.getName(),
-                            dto.getTitle(),
-                            dto.getAmount(),
-                            amountPerUser,
-                            currentUser.getEmail(),
-                            currentUser.getEmail()
-                                    + " dodał wydatek "
-                                    + dto.getTitle()
-                    );
-
-            groupNotificationService.sendToUser(
-                    member.getEmail(),
-                    notification
-            );
-            if (firstDebt == null) {
-                firstDebt = savedDebt;
-            }
+            groupNotificationService.sendToUser(member.getEmail(), notification);
+            if (firstDebt == null) firstDebt = savedDebt;
         }
 
         return firstDebt;
     }
 
-    public void deleteDebt(
-            Long debtId
-    ) {
+    @Transactional
+    public void deleteDebt(Long debtId) {
+        Debt debt = debtRepository.findById(debtId)
+                .orElseThrow(() -> new IllegalArgumentException("Nie znaleziono długu"));
+        final User currentUser = currentUserService.getCurrentUser();
 
-        Debt debt =
-                debtRepository.findById(
-                        debtId
-                ).orElseThrow();
+        boolean isOwner = debt.getGroup().getOwner().getId().equals(currentUser.getId());
+        boolean isDebtor = debt.getDebtor().getId().equals(currentUser.getId());
+        boolean isCreditor = debt.getCreditor().getId().equals(currentUser.getId());
 
-        User currentUser =
-                currentUserService.getCurrentUser();
-
-        boolean isOwner =
-                debt.getGroup()
-                        .getOwner()
-                        .getId()
-                        .equals(
-                                currentUser.getId()
-                        );
-
-        boolean isDebtor =
-                debt.getDebtor()
-                        .getId()
-                        .equals(
-                                currentUser.getId()
-                        );
-
-        boolean isCreditor =
-                debt.getCreditor()
-                        .getId()
-                        .equals(
-                                currentUser.getId()
-                        );
-
-        if (
-                !isOwner
-                        && !isDebtor
-                        && !isCreditor
-        ) {
-            throw new RuntimeException(
-                    "Brak uprawnien do usuniecia dlugu"
-            );
+        if (!isOwner && !isDebtor && !isCreditor) {
+            throw new SecurityException("Brak uprawnień do usunięcia długu");
         }
-
-        debtRepository.delete(
-                debt
-        );
+        debtRepository.delete(debt);
     }
 
-    private List<Membership> selectParticipants(
-            GroupTransactionDTO dto,
-            List<Membership> members,
-            User currentUser
-    ) {
+    @Transactional
+    public Debt markDebtAsPaid(Long debtId) {
+        Debt debt = getDebtForCurrentGroupMember(debtId);
+        User currentUser = currentUserService.getCurrentUser();
 
-        List<Long> selectedUserIds =
-                dto.getSelectedUserIds();
-
-        if (
-                selectedUserIds == null
-                        || selectedUserIds.isEmpty()
-        ) {
-            return members;
-        }
-
-        Set<Long> ids =
-                new HashSet<>(selectedUserIds);
-
-        List<Membership> selected =
-                members.stream()
-                        .filter(m ->
-                                ids.contains(
-                                        m.getUser().getId()
-                                )
-                        )
-                        .toList();
-
-        if (selected.size() != ids.size()) {
-            throw new RuntimeException(
-                    "Wszyscy wybrani uzytkownicy musza nalezec do grupy"
-            );
-        }
-
-        boolean currentUserSelected =
-                selected.stream()
-                        .anyMatch(m ->
-                                m.getUser()
-                                        .getId()
-                                        .equals(
-                                                currentUser.getId()
-                                        )
-                        );
-
-        if (!currentUserSelected) {
-            throw new RuntimeException(
-                    "Aktualny uzytkownik musi byc uczestnikiem"
-            );
-        }
-
-        if (selected.size() < 2) {
-            throw new RuntimeException(
-                    "Transakcja wymaga minimum 2 uczestnikow"
-            );
-        }
-
-        return selected;
-    }
-
-    private Debt getDebtForCurrentGroupMember(
-            Long debtId
-    ) {
-
-        Debt debt =
-                debtRepository.findById(
-                        debtId
-                ).orElseThrow(() ->
-                        new RuntimeException(
-                                "Nie znaleziono dlugu"
-                        )
-                );
-
-        User currentUser =
-                currentUserService.getCurrentUser();
-
-        boolean member =
-                membershipRepository
-                        .existsByGroup_IdAndUser_Id(
-                                debt.getGroup().getId(),
-                                currentUser.getId()
-                        );
-
-        if (!member) {
-            throw new RuntimeException(
-                    "Brak dostepu do grupy"
-            );
-        }
-
-        return debt;
-    }
-
-    public Debt markDebtAsPaid(
-            Long debtId
-    ) {
-
-        Debt debt =
-                getDebtForCurrentGroupMember(
-                        debtId
-                );
-
-        User currentUser =
-                currentUserService.getCurrentUser();
-
-        if (
-                !debt.getDebtor()
-                        .getId()
-                        .equals(
-                                currentUser.getId()
-                        )
-        ) {
-            throw new RuntimeException(
-                    "Tylko dluznik moze oznaczyc dlug jako oplacony"
-            );
+        if (!debt.getDebtor().getId().equals(currentUser.getId())) {
+            throw new SecurityException("Tylko dłużnik może oznaczyć dług jako opłacony");
         }
 
         debt.setPaidByDebtor(true);
-
         debt.setConfirmedByCreditor(false);
-
-        return debtRepository.save(
-                debt
-        );
+        return debtRepository.save(debt);
     }
 
-    public Debt confirmDebtPayment(
-            Long debtId
-    ) {
+    @Transactional
+    public Debt confirmDebtPayment(Long debtId) {
+        Debt debt = getDebtForCurrentGroupMember(debtId);
+        User currentUser = currentUserService.getCurrentUser();
 
-        Debt debt =
-                getDebtForCurrentGroupMember(
-                        debtId
-                );
-
-        User currentUser =
-                currentUserService.getCurrentUser();
-
-        if (
-                !debt.getCreditor()
-                        .getId()
-                        .equals(
-                                currentUser.getId()
-                        )
-        ) {
-            throw new RuntimeException(
-                    "Tylko wierzyciel moze potwierdzic splate"
-            );
+        if (!debt.getCreditor().getId().equals(currentUser.getId())) {
+            throw new SecurityException("Tylko wierzyciel może potwierdzić spłatę");
         }
 
         if (!debt.isPaidByDebtor()) {
-            throw new RuntimeException(
-                    "Dlug musi zostac oznaczony jako oplacony"
-            );
+            throw new IllegalStateException("Dług musi zostać oznaczony jako opłacony przez dłużnika");
         }
 
         debt.setConfirmedByCreditor(true);
 
         Transaction transaction = new Transaction();
-
         transaction.setUser(currentUser);
         transaction.setAmount(debt.getAmount());
         transaction.setType(TransactionType.INCOME);
-        transaction.setTimestamp(LocalDateTime.now());
-        transaction.setNotes(
-                "Spłata długu: " + debt.getTitle()
-        );
+        transaction.setTimestamp(LocalDateTime.now(UTC_CLOCK));
+        transaction.setNotes("Spłata długu: " + debt.getTitle());
 
         transactionRepository.save(transaction);
+        return debtRepository.save(debt);
+    }
 
-        return debtRepository.save(
-                debt
-        );
+
+    private void validateGroupOwner(Group group) {
+        if (group.getOwner() == null) throw new IllegalStateException("Grupa nie ma właściciela");
+    }
+
+    private void validateSelfDebt(User debtor, User creditor) {
+        if (debtor.getId().equals(creditor.getId()))
+            throw new IllegalArgumentException("Nie można utworzyć długu do samego siebie");
+    }
+
+    private void validateMemberships(Group group, User debtor, User creditor) {
+        if (!membershipRepository.existsByGroup_IdAndUser_Id(group.getId(), debtor.getId()))
+            throw new IllegalArgumentException("Dłużnik nie należy do grupy");
+        if (!membershipRepository.existsByGroup_IdAndUser_Id(group.getId(), creditor.getId()))
+            throw new IllegalArgumentException("Wierzyciel nie należy do grupy");
+    }
+
+    private void checkAuthorization(Group group, User debtor, User creditor, User currentUser) {
+        boolean isOwner = group.getOwner().getId().equals(currentUser.getId());
+        boolean isParticipant = debtor.getId().equals(currentUser.getId()) || creditor.getId().equals(currentUser.getId());
+
+        if (!isOwner && !isParticipant)
+            throw new SecurityException("Możesz tworzyć tylko własne długi");
+    }
+
+    private List<Membership> selectParticipants(GroupTransactionDTO dto, List<Membership> members, User currentUser) {
+        List<Long> selectedUserIds = dto.getSelectedUserIds();
+        if (selectedUserIds == null || selectedUserIds.isEmpty()) return members;
+
+        Set<Long> ids = new HashSet<>(selectedUserIds);
+        List<Membership> selected = members.stream()
+                .filter(m -> ids.contains(m.getUser().getId()))
+                .collect(Collectors.toList());
+
+        if (selected.size() != ids.size()) throw new IllegalArgumentException("Wszyscy wybrani użytkownicy muszą należeć do grupy");
+        if (selected.stream().noneMatch(m -> m.getUser().getId().equals(currentUser.getId())))
+            throw new IllegalStateException("Aktualny użytkownik musi być uczestnikiem");
+        if (selected.size() < 2) throw new IllegalArgumentException("Transakcja wymaga minimum 2 uczestników");
+
+        return selected;
+    }
+
+    private Debt getDebtForCurrentGroupMember(Long debtId) {
+        Debt debt = debtRepository.findById(debtId)
+                .orElseThrow(() -> new IllegalArgumentException("Nie znaleziono długu"));
+        User currentUser = currentUserService.getCurrentUser();
+
+        if (!membershipRepository.existsByGroup_IdAndUser_Id(debt.getGroup().getId(), currentUser.getId())) {
+            throw new SecurityException("Brak dostępu do grupy");
+        }
+        return debt;
     }
 }
